--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>smallromm</title>
+  <title>small room</title>
 </head>
 <body style="text-align:center; font-family:sans-serif;">
   <h1>hey fucky word</h1>
