--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body style="text-align:center; font-family:sans-serif;">
   <h1>hey fucky word</h1>
-  <p> pain</p>
+  <p> pain. source code sample</p>
 </body>
 </html>
