--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 <body style="text-align:center; font-family:sans-serif;">
   <h1>hey fucky word</h1>
   <p> pain. source code sample</p>
+  <a href="commaands.html">
+  <button>Commands</button>ی</button>
+</a>
+
 </body>
 </html>
