--- a/commands.html
+++ b/commands.html
@@ -1,1 +1,10 @@
 
+ <!DOCTYPE html>
+<html>
+<body>
+
+<p>run xray : sudo /usr/local/bin/xray run -c /usr/local/etc/xray/config.json</p>
+<p>test connection : sudo curl --socks5 127.0.0.1:10808 http://ip-api.com/</p>
+
+</body>
+</html> 
