--- a/commands.html
+++ b/commands.html
@@ -5,6 +5,7 @@
 
 <p>run xray : sudo /usr/local/bin/xray run -c /usr/local/etc/xray/config.json</p>
 <p>test connection : sudo curl --socks5 127.0.0.1:10808 http://ip-api.com/    or   sudo curl -x socks5h://127.0.0.1:10808 https://ip_api.com/</p>
+ <p>set manual time & date : sudo timedatectl set-time "2025-09-24 18:18:00"</p>
 <p style="font-family:verdana">path : pwd </p>
  <p>x</p>
 </body>
